--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Review Form|Summmer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../css/custom.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
   </head>
   <body>
     <div class="bg-white">
